# popcount-benchmark

./: .gitignore  CHANGELOG.md  README.md  cabal.project  clang-popcount.S  gcc-popcount.S  popcount-benchmark.cabal
bench/: Main.hs
cbits/: popcount.c  popcount.h
